--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <section style="background: #eee; max-width: 700px; margin: 0 auto; padding: 0 50px; border-top: 5px solid black; border-bottom: 5px solid black;">
+    <section style="background: #eee; max-width: 700px; margin: 0 auto; padding: 0px 50px; border-top: 5px solid black; border-bottom: 5px solid black;">
         <!-- header -->
         <table style="width: 100%; table-layout: fixed;">
             <tr>
@@ -28,9 +28,11 @@
                     <h1>Jonathan Doe</h1>
                     <h4>Web designer, Director</h4>
                 </td>
-                <td style="width:30%">
-                    <button style="background-color: white;">Download PDF</button> <br>
-                    <a href="mailto:name@yourdomain.com ">name@yourdomain.com</a>
+                <td style="width:30%; padding-top: 20px;">
+                    <button style="background-color: white;">Download PDF</button>
+                    <p>
+                        <a style="color:red" href="mailto:name@yourdomain.com ">name@yourdomain.com</a>
+                    </p>
                     <p>(313)-867-5309</p>
                 </td>
             </tr>
@@ -141,7 +143,7 @@
             <tr>
                 <td style="border-bottom: 0;">
                     <p>
-                        Jonathan Doe-<a href="mailto:name@yourdomain.com " name="mailto ">name@yourdomain.com</a> - (313) - 871-5309
+                        Jonathan Doe-<a style="color:red" href="mailto:name@yourdomain.com " name="mailto ">name@yourdomain.com</a> - (313) - 871-5309
                     </p>
                 </td>
             </tr>
